# primalscheme3

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: pytest.yml  run_tests.yml
cli/: index.html
docs/: schemes.md
output/: config.json  output.primer.bed
panels/: index.html
primal_digest/: __init__.py  bedfiles.py  classes.py  cli.py  config.py  create_report_data.py  create_reports.py  digestion.py  get_window.py  iteraction.py  main.py  mapping.py  mismatches.py  msa.py  primer_pair_score.py  report.py  seq_functions.py  thermo.py
primal_panel/: cli.py  entropy.py  main.py  minimal_scheme.py  minimal_scheme_classes.py  single.primer.bed
primalscheme3/: bedfiles.py  cli.py  create_report_data.py  create_reports.py  errors.py  iteraction.py
primalscheme3/core/: bedfiles.py  classes.py  config.py  create_report_data.py  create_reports.py  digestion.py  downsample.py  errors.py  logger.py  mapping.py  mismatches.py  msa.py  multiplex.py  primer_visual.py  progress_tracker.py  repair.py  seq_functions.py  thermo.py
primalscheme3/flu/: flu_main.py
primalscheme3/interaction/: interaction.py
primalscheme3/panel/: classes2.py  config.py  main.py  minimal_scheme_classes.py  panel_classes.py  panel_main.py
primalscheme3/remap/: remap.py
primalscheme3/repair/: repair.py  repair_classes.py
primalscheme3/replace/: replace.py
primalscheme3/scheme/: classes.py  main.py  primer_pair_score.py  scheme_main.py
schemes/: index.html
search/: search_index.json
test_covid/: amplicon.bed  config.json  primer.bed
tests/: test_bedfile.py  test_digestion.py  test_do_pools_interact.py  test_funcs.py  test_getwindows.py  test_mapping.py  test_mismatch.py  test_scheme.py
tests/core/: test_bedfile.bed  test_bedfile.py  test_classes.py  test_config.py  test_digestion.py  test_do_pools_interact.py  test_funcs.py  test_getwindows.py  test_mapping.py  test_mismatch.py  test_msa.py  test_multiplex.py  test_seq_functions.py  test_thermo.py  testcase.db
tests/integration/: test_main.py  test_mapping_intergration.py  test_visualise_primers.py
tests/intergration/: test_main.py  test_mapping_intergration.py
tests/panel/: test_minimal_scheme_classes.py  test_panel_classes.py
tests/scheme/: test_scheme.py
tests/test_data/: test_bedfile_header.bed  test_bedfile_no_header.bed
