[tool.poetry]
name = "primalscheme3"
version = "1.3.0"
description = ""
authors = ["ChrisKent <chrisgkent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
primer3-py = "^1.2.2"
biopython = "^1.80"
numpy = "^1.24.2"
primaldimer_py = "^1.0.4"
networkx = "^3.1"
loguru = "^0.7.0"
kaleido = "0.2.1"
plotly = "^5.16.1"
tqdm = "^4.66.1"
pytest = "^7.4.2"
typer = "^0.12.3"

wheel = "^0.43.0"
[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
ruff = "^0.3.4"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
primalscheme3 = 'primalscheme3.cli:app'

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
ignore = ["E501"]