[tool.poetry]
name = "primalscheme3"
version = "3.0.4"
description = "Generation of highly multiplexed primer schemes"
authors = ["ChrisKent <chrisgkent@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/artic-network/primalscheme3"

[tool.poetry.dependencies]
python = "^3.11"
primer3-py = "^1.2.2"
biopython = "^1.80"
numpy = "^1.24.2"
primaldimer_py = "^1.0.4"
networkx = "^3.1"
kaleido = "0.2.1"
plotly = "^5.16.1"
tqdm = "^4.66.1"
typer = "^0.12.3"
primalschemers = {path = "/Users/kentcg/primalschemers/target/wheels/primalschemers-0.1.3-cp311-cp311-macosx_11_0_arm64.whl"}
primalbedtools = "^0.6.2"



[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
ruff = "^0.3.4"
pytest = "^7.4.2"
pre-commit = "^4.0.1"
coverage = "^7.8.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
primalscheme3 = 'primalscheme3.cli:app'

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
ignore = ["E501"]