[tool.poetry]
name = "primalscheme3"
version = "3.3.0"
description = "Generation of highly multiplexed primer schemes"
authors = ["ChrisKent <chrisgkent@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/artic-network/primalscheme3"

[tool.poetry.dependencies]
python = "^3.11"
primer3-py = "^2.2.0"
numpy = "^1.24.2"
networkx = "^3.1"
kaleido = "0.2.1"
plotly = "^5.16.1"
tqdm = "^4.66.1"
typer = "^0.16.1"
primalbedtools = "^0.10.1"
dnaio = "^1.2.3"
matplotlib = "^3.10.5"
regex = "^2025.7.34"
primalschemers = "^0.1.9"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
ruff = "^0.11.4"
pytest = "^7.4.2"
pre-commit = "^4.0.1"
pytest-xdist = "^3.6.1"
coverage = "^7.8.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.27"
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
primalscheme3 = 'primalscheme3.cli:app'

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
ignore = ["E501"]